--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,13 @@ main:
   - name: Bio
     url: /
     weight: 10
-  - name: Papers
-    url: /#papers
-    weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
+  - name: Curriculum
     url: experience/
     weight: 20
+  - name: Publications
+    url: /#papers
+    weight: 30
   - name: Projects
     url: projects/
-    weight: 30
-  - name: Teaching
-    url: teaching/
     weight: 40
+
