--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,7 +13,7 @@ main:
   - name: Publications
     url: /#papers
     weight: 30
-  - name: Projects
-    url: projects/
-    weight: 40
+#  - name: Projects
+#    url: projects/
+#   weight: 40
 
