--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: experience/
     weight: 20
   - name: Publications
-    url: /#papers
+    url: /papers
     weight: 30
 #  - name: Projects
 #    url: projects/
