--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,14 +4,14 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: Home
     url: /
     weight: 10
   - name: Curriculum
     url: experience/
     weight: 20
   - name: Publications
-    url: /papers
+    url: publication/
     weight: 30
 #  - name: Projects
 #    url: projects/
